--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -24,10 +24,7 @@ rule_files:
 alerting:
   alertmanagers:
   {{ prometheus_alertmanager_config | to_nice_yaml(indent=2) | indent(2,False) }}
-  {% if prometheus_alert_relabel_configs | length > 0 %}
-  alert_relabel_configs:
-  {{ prometheus_alert_relabel_configs | to_nice_yaml(indent=2) | indent(2,False) }}
-  {% endif %}
+  alert_relabel_configs: []
 {% endif %}
 
 scrape_configs:
