ST-321 fix nodeexporter service

--- a/roles/prometheus/templates/node_exporter.service.j2
+++ b/roles/prometheus/templates/node_exporter.service.j2
@@ -3,8 +3,8 @@ Description=Node Exporter
 After=network.target
 
 [Service]
-User=nodeusr
-Group=nodeusr
+User=root
+Group=root
 Type=simple
 ExecStart=/usr/bin/prometheus-node-exporter
 
