--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -49,3 +49,45 @@ scrape_configs:
       # Actually talk to the blackbox exporter though
       - target_label: __address__
         replacement: {{ ansible_fqdn | default(ansible_host) | default('localhost') }}:9115
+
+{% if k8s_api_server | length > 0 %}
+  - job_name: 'kubernetes-apiservers'
+    scheme: https
+    kubernetes_sd_configs:
+      - api_server: "{{ k8s_api_server }}"
+        role: endpoints
+        # bearer_token: {{ k8s_bearer_token }}
+        basic_auth:
+          username: {{k8s_username}}
+        tls_config:
+          ca_file: /etc/prometheus/ca.crt
+          cert_file: /etc/prometheus/client.crt
+          key_file:  /etc/prometheus/client.key
+          insecure_skip_verify: true
+    relabel_configs:
+    - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
+      action: keep
+      regex: default;kubernetes;https
+
+  - job_name: 'k8s_pod'
+    kubernetes_sd_configs:
+      - api_server: "{{ k8s_api_server }}"
+        role: pod
+        # bearer_token: {{ k8s_bearer_token }}
+        basic_auth:
+          username: {{k8s_username}}
+        tls_config:
+          ca_file: /etc/prometheus/ca.crt
+          cert_file: /etc/prometheus/client.crt
+          key_file:  /etc/prometheus/client.key
+          insecure_skip_verify: true
+    relabel_configs:
+    - action: labelmap
+      regex: __meta_kubernetes_pod_label_(.+)
+    - source_labels: [__meta_kubernetes_namespace]
+      action: replace
+      target_label: kubernetes_namespace
+    - source_labels: [__meta_kubernetes_pod_name]
+      action: replace
+      target_label: kubernetes_pod_name
+{% endif %}
