--- a/roles/prometheus/templates/alertmanager.yml.j2
+++ b/roles/prometheus/templates/alertmanager.yml.j2
@@ -19,5 +19,5 @@ route:
 receivers:
 - name: 'slack-notifications'
   slack_configs:
-  - channel: 'Matteo Di Carlo'
+  - channel: 'prometheus-alerts'
     text: "http://{{ ansible_fqdn | default(ansible_host) | default('localhost') }}:9090/alerts"
