[ST-322] changed text message for alerts

--- a/roles/prometheus/templates/alertmanager.yml.j2
+++ b/roles/prometheus/templates/alertmanager.yml.j2
@@ -20,4 +20,4 @@ receivers:
 - name: 'slack-notifications'
   slack_configs:
   - channel: 'prometheus-alerts'
-    text: "http://alerts.engageska-portugal.pt:9090/alerts"
+    text: "http://alerts.engageska-portugal.pt/alerts"
