--- a/roles/prometheus/templates/alertmanager.yml.j2
+++ b/roles/prometheus/templates/alertmanager.yml.j2
@@ -16,8 +16,10 @@ route:
   repeat_interval: 1h
   group_by: [alertname, datacenter, app]
 
+{% if alerts_inhibit_rules != [] %}
 inhibit_rules:
 {{ alerts_inhibit_rules | to_nice_yaml(indent=2) | indent(2,False) }}
+{% endif %}
 
 receivers:
 - name: 'slack-notifications'
