ST-324 - adjust slack text

--- a/roles/prometheus/templates/alertmanager.yml.j2
+++ b/roles/prometheus/templates/alertmanager.yml.j2
@@ -25,4 +25,4 @@ receivers:
 - name: 'slack-notifications'
   slack_configs:
   - channel: 'prometheus-alerts'
-    text: "http://alerts.engageska-portugal.pt/alerts"
+#    text: "http://alerts.engageska-portugal.pt/alerts"
