St-324 - fix up layout

--- a/roles/prometheus/templates/gitlab_ci_pipelines_exporter.yml.j2
+++ b/roles/prometheus/templates/gitlab_ci_pipelines_exporter.yml.j2
@@ -14,4 +14,7 @@ wildcards:
       name: ska-telescope
       kind: group
       include_subgroups: true
+      # Fetch merge request pipelines refs (optional, default: false)
       fetch_merge_request_pipelines_refs: true
+      # get the latest status
+      output_sparse_status_metrics: false
