--- a/roles/prometheus/templates/alertmanager.yml.j2
+++ b/roles/prometheus/templates/alertmanager.yml.j2
@@ -25,4 +25,4 @@ receivers:
 - name: 'slack-notifications'
   slack_configs:
   - channel: 'prometheus-alerts'
-    text: "<!channel> \nAlert: {{ '{{' }} .GroupLabels.alertname {{ '}}' }} \nSummary: {{ '{{' }} .CommonAnnotations.summary {{ '}}' }} \n\nDescription: {{ '{{' }} .CommonAnnotations.description {{ '}}' }} \nSee: http://alerts.engageska-portugal.pt/alerts"
+    text: "<!channel> \nAlert: {{ '{{' }} .GroupLabels.alertname {{ '}}' }} \nSummary: {{ '{{' }} .CommonAnnotations.summary {{ '}}' }} \n\nMessage: {{ '{{' }} .CommonAnnotations.message {{ '}}' }} \n\nDescription: {{ '{{' }} .CommonAnnotations.description {{ '}}' }} \nSee: http://alerts.engageska-portugal.pt/alerts"
