--- a/roles/docker/templates/Debian-docker.conf.j2
+++ b/roles/docker/templates/Debian-docker.conf.j2
@@ -4,7 +4,7 @@ Type=notify
 # exists and systemd currently does not support the cgroup feature set required
 # for containers run by docker
 ExecStart=
-ExecStart=/usr/bin/dockerd -H fd:// --containerd=/run/containerd/containerd.sock --log-driver=journald --storage-driver=overlay2 --label nodetype={{ inventory_hostname }} --experimental=true --metrics-addr=0.0.0.0:9323 --insecure-registry=localhost:5000  --insecure-registry={{ inventory_hostname }}:5000
+ExecStart=/usr/bin/dockerd -H fd:// --containerd=/run/containerd/containerd.sock --storage-driver=overlay2 --label nodetype={{ inventory_hostname }} --insecure-registry=localhost:5000  --insecure-registry={{ inventory_hostname }}:5000
 ExecReload=/bin/kill -s HUP $MAINPID
 TimeoutSec=0
 RestartSec=2
