--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -113,6 +113,30 @@ scrape_configs:
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics
 
+  # - job_name: 'cadvisor'
+  #   kubernetes_sd_configs:
+  #   - role: node
+  #     api_server: "{{ k8s_api_server }}"
+  #     # TLS config required in two places
+  #     tls_config:
+  #       ca_file: /etc/prometheus/ca.crt
+  #     bearer_token_file: {{ k8s_bearer_token }}
+  #   scheme: https
+  #   # TLS config required in two places
+  #   tls_config:
+  #     insecure_skip_verify: true
+  #   bearer_token_file: {{ k8s_bearer_token }}
+  #   #metrics_path: /metrics/cadvisor
+  #   relabel_configs:
+  #   - action: labelmap
+  #     regex: __meta_kubernetes_node_label_(.+)
+  #   - target_label: __address__
+  #     replacement: kubernetes.default.svc:443
+  #   - source_labels: [__meta_kubernetes_node_name]
+  #     regex: (.+)
+  #     target_label: __metrics_path__
+  #     replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+
   - job_name: 'cadvisor'
     kubernetes_sd_configs:
     - role: node
@@ -126,13 +150,6 @@ scrape_configs:
     tls_config:
       insecure_skip_verify: true
     bearer_token_file: {{ k8s_bearer_token }}
-    metric_relabel_configs:
-    - action: labelmap
-      regex: __meta_kubernetes_node_label_(.+)
-    - target_label: __address__
-      replacement: kubernetes.default.svc:443
-    - source_labels: [__meta_kubernetes_node_name]
-      regex: (.+)
-      target_label: __metrics_path__
-      replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+    metrics_path: /metrics/cadvisor
+
 {% endif %}
